Better Tools better MapData